# samples_using_mpi

./: CMakeLists.txt  CMakePresets.json  README.md
ch3/: CMakeLists.txt  matmat.cc  matmat.py  matvec.cc  monte-carlo.cc  monte-carlo.py  pi.cc
